реализация CRUD в сервисе

--- a/DigitalLibrary.TestConsole/appsettings.json
+++ b/DigitalLibrary.TestConsole/appsettings.json
@@ -2,7 +2,7 @@
   "Database": {
     "Type": "MSSQL",
     "ConnectionStrings": {
-      "MSSQL": "Data Source=MaratPC\\SQLEXPRESS;Database=DigitalLibrary;Trusted_Connection=True; TrustServerCertificate=True",
+      "MSSQL": "Data Source=MARAT_PC\\SQLEXPRESS;Database=DigitalLibrary;Trusted_Connection=True; TrustServerCertificate=True",
       "SQLite": "Data Source=DigitalLibrary.db"
     }
   }
